--- a/assets/toasts.scss
+++ b/assets/toasts.scss
@@ -45,10 +45,11 @@
   }
 
   &--theme--dark {
-    background-color: #323232;
+    background-color: #2c2c54;
+    border: 1px solid #40407a;
 
     .toast__progressbar {
-      background-color: #7a7a7a;
+      background-color: #706fd3;
     }
 
     .toast__text {
@@ -57,28 +58,26 @@
   }
 
   &--theme--light {
-    background-color: #d3d3d3;
+    background-color: #ffffff;
+    border: 1px solid #d1d8e0;
 
     .toast__progressbar {
-      background-color: #858585;
+      background-color: #45aaf2;
     }
 
     .toast__text {
-      color: #000000;
+      color: #2c3e50;
     }
   }
 
   &__content {
     display: flex;
     padding: 1rem;
-
-    & > .toast__icon {
-      margin-right: 0.5rem;
-    }
   }
 
   &__text {
     margin: 0;
+    font-size: 0.9rem;
   }
 
   &__progressbar {
